# Cyanite-Engine

./: .gitattributes  .gitignore  .gitmodules  Cyanite.sln  README.md
API/: BuildScriptingLibs.bat  CMakeLists.txt  Package.swift  PlayerMoveDispatcher.swift
API/Core/: CMakeLists.txt
API/Core/Components/: Color.swift  Material.swift  Mesh.swift  Shader.swift  Texture.swift
API/Core/EntitySystem/: CMakeLists.txt  CameraComponent.swift  Component.swift  ComponentDispatcher.swift  DispatchHandler.swift  Entity.swift  EntityPool.swift  MeshComponent.swift  MoveComponent.swift  Package.swift  RotateComponent.swift  Transform.swift  TransformComponent.swift
API/Core/Math/: CMakeLists.txt  Package.swift  Quaternion.swift  Range.swift  Vector2.swift  Vector3.swift
API/Core/System/: CMakeLists.txt  Input.swift  Main.swift  Package.swift  SystemInfo.swift  Time.swift
API/Internal/Editor/: Meta.swift
API/Internal/Editor/UI/: Rect.swift  Window.swift
Bindings/: CMakeCache.txt  CMakeLists.txt  Main.swift  Test.swift  cmake_install.cmake
Core/AssetKit/: AssetHandler.cxx  AssetHandler.hxx  AssetKit.vcxproj  AssetKit.vcxproj.filters  pch.hxx
Core/AudioKit/: AudioKit.cpp  AudioKit.vcxproj  AudioKit.vcxproj.filters
Core/DebugKit/: DebugKit.cxx  DebugKit.vcxproj  DebugKit.vcxproj.filters  pch.hxx
Core/EventKit/: Event.hxx  EventKit.cpp  EventKit.cxx  EventKit.vcxproj  EventKit.vcxproj.filters  EventQueue.hxx  EventRelay.hxx  pch.cxx  pch.hxx
Core/GameKit/: Engine.cxx  Engine.hxx  Game.cxx  Game.hxx  GameKit.vcxproj  GameKit.vcxproj.filters  IEngine.hxx  pch.hxx
Core/GraphicsKit/: Camera.hxx  Color.hxx  CommandAllocatorHandler.cxx  CommandAllocatorHandler.hxx  CommandQueueHandler.cxx  CommandQueueHandler.hxx  Config.hxx  DeviceHandler.cxx  DeviceHandler.hxx  FactoryHandler.cxx  FactoryHandler.hxx  Frame.cxx  Frame.hxx  GPUBuffer.cxx  GPUBuffer.hxx  Gpu.cxx  Gpu.hxx  GpuResource.hxx  GpuWorkerThread.cxx  GpuWorkerThread.hxx  GraphicsHandler.cxx  GraphicsHandler.hxx  GraphicsKit.vcxproj  GraphicsKit.vcxproj.filters  Heap.cxx  Heap.hxx  Helpers.hxx  Light.hxx  Rect.hxx  Scene.hxx  SquidRoom.h  SwapChainHandler.cxx  SwapChainHandler.hxx  Texture.hxx  Transform.hxx  TypeConverter.hxx  Types.hxx  UiWorkerThread.cxx  UiWorkerThread.hxx  View.cxx  (+3 more)
Core/Input/Input/: .gitignore  CMakeLists.txt  CreateWindowsProject.bat  README.md  package.appxmanifest
Core/Input/Input/.github/workflows/: build_mac.yml  build_ubuntu.yml  build_windows.yml
Core/Input/Input/include/: Controller.hxx  ControllerKit.hxx  DualSense.hxx  DualShock4.hxx  Gaming.Input.hxx  GamingInputController.hxx  HID.hxx  HIDController.hxx  Interface.hxx  Mapper.hxx  Math.hxx  USB.hxx  XBoxOne.hxx  XInput.hxx  XInputController.hxx
Core/Input/Input/include/interfaces/: IAdaptiveTriggerController.hxx  IGyroscopeController.hxx  IImpulseTriggerController.hxx  ILightbarController.hxx  IRumbleController.hxx  ITouchpadController.hxx
Core/Input/Input/plugins/csharp/: ControllerKit.cs
Core/Input/Input/plugins/managed/: ControllerKit.cxx  ControllerKit.hxx
Core/Input/Input/src/: Controller.cxx  ControllerKit.cxx  DualSense.cxx  DualShock4.cxx  HIDController.cxx  XBoxOne.cxx
Core/Input/Input/src/win32/: Gaming.Input.cxx  GamingInputController.cxx  HID.cxx  Interface.cxx  USB.cxx  XInput.cxx  XInputController.cxx
Core/Input/Input/test/: main.cxx
Core/InputKit/: InputKit.cpp  InputKit.vcxproj  InputKit.vcxproj.filters  pch.hxx
Core/MathKit/: MathKit.cpp  MathKit.vcxproj  MathKit.vcxproj.filters  Matrix.hxx  Quaternion.hxx  Range.hxx  Vector.hxx  pch.hxx
Core/NetworkKit/: NetworkKit.cxx  NetworkKit.vcxproj  NetworkKit.vcxproj.filters
Core/Networking/: .editorconfig  .gitignore  CMakeLists.txt  CreateWindowsProject.bat  README.md
Core/Networking/include/: Client.hxx  Connection.hxx  Defines.hxx  FastNet.hxx  Helpers.hxx  Logger.hxx  Macros.hxx  NetworkLayer.hxx  Peer.hxx  Server.hxx  Socket.hxx  Types.hxx
Core/Networking/src/: Client.cxx  FastNet.cxx  Main.cxx  NetworkLayer.cxx  Peer.cxx  Server.cxx  Socket.cxx
Core/SystemKit/: SystemInfo.hxx  SystemKit.vcxproj  SystemKit.vcxproj.filters  pch.hxx
Core/UtilsKit/: UtilsKit.cpp  UtilsKit.vcxproj.filters
Libs/ImGUI/: ImGUI.vcxproj  ImGUI.vcxproj.filters
Libs/spdlog/: spdlog.vcxproj  spdlog.vcxproj.filters
UtilsKit/: Steptimer.hxx  UtilsKit.vcxproj  pch.hxx
